# laminae-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
examples/: demo_safe_generation.py  methodology_model_selection.py
src/laminae/: __init__.py  compile.py  ir.py  latex.py  render.py
src/laminae/templates/: accent.tex.j2  clean.tex.j2  ember.tex.j2
tests/: test_ir.py  test_latex.py  test_render.py
