[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laminae"
version = "0.1.0"
description = "Safe, auditable generation of LaTeX/Beamer documents from a typed IR."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Giancarlo Breschi" }]
keywords = ["latex", "beamer", "pdf", "llm", "structured-output", "reporting"]

# The trusted rendering core needs only Jinja2 and pydantic. Asset generation
# (numpy/matplotlib) and testing are optional extras, keeping the core
# dependency surface — and thus the trusted computing base — small.
dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
demo = ["numpy>=1.24", "matplotlib>=3.7"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
laminae = ["templates/*.tex.j2"]
